--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+regr_env/
 .env
 .venv
 env/
@@ -129,6 +130,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Files and Folders
+data/
 
 # Spyder project settings
 .spyderproject
